tests/ui/tag_uniqueness.stderr
error: tag values must not be duplicate
  --> $DIR/tag_uniqueness.rs:10:9
   |
10 |         #[tag = 0]
   |         ^^^^^^^^^^

error: tag values must not be duplicate
  --> $DIR/tag_uniqueness.rs:18:9
   |
18 |         #[tag = 0]
   |         ^^^^^^^^^^

error: tag values must not be duplicate
  --> $DIR/tag_uniqueness.rs:30:9
   |
30 |         #[tag = 0]
   |         ^^^^^^^^^^

error: tag values must not be duplicate
  --> $DIR/tag_uniqueness.rs:38:9
   |
38 |         #[tag = 0]
   |         ^^^^^^^^^^
